[gd_scene load_steps=44 format=3 uid="uid://xbr6m1a6haq2"]

[ext_resource type="Script" path="res://Scripts/bonus_room.gd" id="1_au0kw"]
[ext_resource type="Texture2D" uid="uid://cxfu0kudqn7xf" path="res://Assets/Tilesets/BonusRoom.png" id="2_6cno3"]
[ext_resource type="Texture2D" uid="uid://dc11yjk1x0x6t" path="res://Assets/Sprites/BonusRoom/MarioHead.png" id="3_xojon"]
[ext_resource type="FontFile" uid="uid://jiobqv87vkb1" path="res://Assets/Fonts/super-mario-land-gb-doublecase.ttf" id="4_swvqp"]
[ext_resource type="Texture2D" uid="uid://cqlwbxyc6gidh" path="res://Assets/Sprites/BonusRoom/Ladder.png" id="5_el03c"]
[ext_resource type="AudioStream" uid="uid://cbf2cdef7oxyp" path="res://Assets/Audio/Original/Bonus Game.wav" id="6_0aqit"]
[ext_resource type="AudioStream" uid="uid://bosnsgxewhhuc" path="res://Assets/Audio/14 Bonus Game Walk.mp3" id="7_pltm6"]
[ext_resource type="Texture2D" uid="uid://kb7btcj6dykb" path="res://Assets/Sprites/Mario/Big_idle.png" id="8_c0nlg"]
[ext_resource type="AudioStream" uid="uid://bdk10pbhgbpnj" path="res://Assets/SFX/bonusgamebad.wav" id="8_pb0wo"]
[ext_resource type="Texture2D" uid="uid://bvwqxyamt1lvg" path="res://Assets/Sprites/Mario/Big_run1.png" id="9_j2uxb"]
[ext_resource type="AudioStream" uid="uid://dsptwjim50cje" path="res://Assets/SFX/bonusgamegood.wav" id="9_mhlny"]
[ext_resource type="Texture2D" uid="uid://b5k1qxur5qnvy" path="res://Assets/Sprites/Mario/Big_run2.png" id="10_1m4ss"]
[ext_resource type="Texture2D" uid="uid://c3ny5223bmbta" path="res://Assets/Sprites/Mario/Big_jump.png" id="11_lm4eq"]
[ext_resource type="Texture2D" uid="uid://ytb4na58nwxk" path="res://Assets/Sprites/Mario/Big_run3.png" id="11_m2042"]
[ext_resource type="Texture2D" uid="uid://bu1r2nm12uem4" path="res://Assets/Sprites/Mario/Small_Idle.png" id="12_q4arc"]
[ext_resource type="Texture2D" uid="uid://dlo3d5vp4wtjg" path="res://Assets/Sprites/Mario/Small_run1.png" id="13_7vt8v"]
[ext_resource type="Texture2D" uid="uid://baul2ukxp5a13" path="res://Assets/Sprites/Mario/Small_run2.png" id="14_tdatc"]
[ext_resource type="Texture2D" uid="uid://cs076i1d5hi2a" path="res://Assets/Sprites/Mario/Small_run3.png" id="15_t2iwp"]
[ext_resource type="Script" path="res://Scripts/mario_bonus_room.gd" id="16_ad0hr"]
[ext_resource type="Texture2D" uid="uid://bxpkkqet7syr2" path="res://Assets/Sprites/Mario/Small_jump.png" id="16_bipyj"]
[ext_resource type="Texture2D" uid="uid://cxn3qm4525m5x" path="res://Assets/Sprites/BonusRoom/1.png" id="19_qreki"]
[ext_resource type="Texture2D" uid="uid://6se6vljk5we8" path="res://Assets/Sprites/BonusRoom/2.png" id="20_guh16"]
[ext_resource type="Texture2D" uid="uid://ddulm8mm010t4" path="res://Assets/Sprites/BonusRoom/3.png" id="21_7650w"]
[ext_resource type="AudioStream" uid="uid://dm4r2eigd2nk8" path="res://Assets/SFX/powerup.wav" id="21_dinx3"]
[ext_resource type="AudioStream" uid="uid://g4dakxsfoesm" path="res://Assets/SFX/1up.wav" id="22_sr1ei"]
[ext_resource type="Texture2D" uid="uid://dx1evt4cc6ghb" path="res://Assets/Sprites/BonusRoom/Flower.png" id="22_vjfgc"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_135a5"]
texture = ExtResource("2_6cno3")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
2:1/0 = 0
2:2/0 = 0
3:2/0 = 0
3:1/0 = 0
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:2/0 = 0
1:1/0 = 0
0:1/0 = 0
0:2/0 = 0
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:0/0/physics_layer_0/polygon_0/one_way = true

[sub_resource type="TileSet" id="TileSet_l6iar"]
tile_size = Vector2i(8, 8)
physics_layer_0/collision_layer = 3
sources/0 = SubResource("TileSetAtlasSource_135a5")

[sub_resource type="LabelSettings" id="LabelSettings_s7f42"]
font = ExtResource("4_swvqp")
font_size = 7
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rgpy1"]
font = ExtResource("4_swvqp")
font_size = 7
font_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c8p0d"]
size = Vector2(7.99754, 23.8523)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2hq5m"]
size = Vector2(8, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_iwsq3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_c0nlg")
}],
"loop": true,
"name": &"big_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_lm4eq")
}],
"loop": true,
"name": &"big_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_j2uxb")
}, {
"duration": 1.0,
"texture": ExtResource("10_1m4ss")
}, {
"duration": 1.0,
"texture": ExtResource("11_m2042")
}],
"loop": true,
"name": &"big_run",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_q4arc")
}],
"loop": true,
"name": &"small_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_bipyj")
}],
"loop": true,
"name": &"small_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_7vt8v")
}, {
"duration": 1.0,
"texture": ExtResource("14_tdatc")
}, {
"duration": 1.0,
"texture": ExtResource("15_t2iwp")
}],
"loop": true,
"name": &"small_run",
"speed": 14.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ecd8y"]
size = Vector2(10.0947, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_hsn7c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_qreki")
}],
"loop": true,
"name": &"1up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_guh16")
}],
"loop": true,
"name": &"2up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_7650w")
}],
"loop": true,
"name": &"3up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_vjfgc")
}],
"loop": true,
"name": &"Flower",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vp7se"]
size = Vector2(21.7983, 17.934)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_43xbc"]
size = Vector2(3.82579, 15.8705)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aku13"]
size = Vector2(22.3889, 18.8543)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ep0p7"]
size = Vector2(3.42849, 18.0038)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dofba"]
size = Vector2(22.6833, 18.5305)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nu3xq"]
size = Vector2(3.06561, 18.1306)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j2hsp"]
size = Vector2(22.8302, 18.5133)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gk12u"]
size = Vector2(2.55046, 17.9759)

[node name="BonusRoom" type="Node"]
script = ExtResource("1_au0kw")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(80, 72)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_l6iar")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 1114112, 0, 2, 1114113, 65536, 2, 1114114, 65536, 2, 1114115, 65536, 2, 1114116, 65536, 2, 1114117, 65536, 2, 1114118, 65536, 2, 1114119, 65536, 2, 1114120, 65536, 2, 1114121, 65536, 2, 1114122, 65536, 2, 1114123, 65536, 2, 1114124, 65536, 2, 1114125, 65536, 2, 1114126, 65536, 2, 1114127, 65536, 2, 1114128, 65536, 2, 1114129, 65536, 2, 1114130, 65536, 2, 1114131, 131072, 2, 1048595, 131072, 1, 983059, 131072, 1, 917523, 131072, 1, 851987, 131072, 1, 786451, 131072, 1, 720915, 131072, 1, 655379, 131072, 1, 589843, 131072, 1, 524307, 131072, 1, 458771, 131072, 1, 393235, 131072, 1, 327699, 131072, 1, 262163, 131072, 1, 196627, 131072, 1, 131091, 131072, 1, 65555, 131072, 1, 19, 131072, 0, 18, 65536, 0, 17, 65536, 0, 16, 65536, 0, 15, 65536, 0, 14, 65536, 0, 13, 65536, 0, 12, 65536, 0, 11, 65536, 0, 10, 65536, 0, 9, 65536, 0, 8, 65536, 0, 7, 65536, 0, 6, 65536, 0, 5, 65536, 0, 4, 65536, 0, 3, 65536, 0, 2, 65536, 0, 1, 65536, 0, 65536, 0, 1, 131072, 0, 1, 196608, 0, 1, 262144, 0, 1, 327680, 0, 1, 393216, 0, 1, 458752, 0, 1, 524288, 0, 1, 589824, 0, 1, 655360, 0, 1, 720896, 0, 1, 786432, 0, 1, 851968, 0, 1, 917504, 0, 1, 983040, 0, 1, 1048576, 0, 1, 1048577, 196608, 0, 1048578, 196608, 0, 1048579, 196608, 0, 1048580, 196608, 0, 1048581, 196608, 0, 1048582, 196608, 0, 1048583, 196608, 0, 1048584, 196608, 0, 1048585, 196608, 0, 1048586, 196608, 0, 1048587, 196608, 0, 1048588, 196608, 0, 1048589, 196608, 0, 1048590, 196608, 0, 1048591, 196608, 0, 1048592, 196608, 0, 1048593, 196608, 0, 1048594, 196608, 0, 851969, 196608, 0, 851970, 196608, 0, 851971, 196608, 0, 851972, 196608, 0, 851973, 196608, 0, 851974, 196608, 0, 851975, 196608, 0, 851976, 196608, 0, 851977, 262144, 0, 851978, 262144, 0, 851979, 196608, 0, 851980, 196608, 0, 851981, 196608, 0, 851982, 196608, 0, 851983, 196608, 0, 851984, 196608, 0, 851985, 196608, 0, 851986, 196608, 0, 655361, 196608, 0, 655362, 196608, 0, 655363, 196608, 0, 655364, 196608, 0, 655365, 196608, 0, 655366, 196608, 0, 655367, 196608, 0, 655368, 196608, 0, 655369, 262144, 0, 655370, 262144, 0, 655371, 196608, 0, 655372, 196608, 0, 655373, 196608, 0, 655374, 196608, 0, 655375, 196608, 0, 655376, 196608, 0, 655377, 196608, 0, 655378, 196608, 0, 458753, 196608, 0, 458754, 196608, 0, 458755, 196608, 0, 458756, 196608, 0, 458757, 196608, 0, 458758, 196608, 0, 458759, 196608, 0, 458760, 196608, 0, 458761, 262144, 0, 458762, 262144, 0, 458763, 196608, 0, 458764, 196608, 0, 458765, 196608, 0, 458766, 196608, 0, 458767, 196608, 0, 458768, 196608, 0, 458769, 196608, 0, 458770, 196608, 0)

[node name="MarioHead" type="Sprite2D" parent="."]
position = Vector2(68, 36)
texture = ExtResource("3_xojon")

[node name="Lives" type="Label" parent="."]
offset_left = 81.3243
offset_top = 31.8649
offset_right = 97.3243
offset_bottom = 39.8649
text = "01"
label_settings = SubResource("LabelSettings_s7f42")

[node name="BonusGameText" type="Label" parent="."]
offset_left = 37.6087
offset_top = 17.2435
offset_right = 117.609
offset_bottom = 25.2435
text = "BONUS GAME"
label_settings = SubResource("LabelSettings_rgpy1")

[node name="Ladder" type="Sprite2D" parent="."]
position = Vector2(80, 68)
texture = ExtResource("5_el03c")

[node name="DownArea" type="Area2D" parent="Ladder"]
collision_layer = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder/DownArea"]
position = Vector2(0.0172195, -0.0140533)
shape = SubResource("RectangleShape2D_c8p0d")

[node name="UpBody" type="StaticBody2D" parent="Ladder"]
collision_layer = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder/UpBody"]
position = Vector2(0, -19.8127)
shape = SubResource("RectangleShape2D_2hq5m")
debug_color = Color(0.584906, 0.00140725, 0.749836, 0.42)

[node name="BonusGame" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_0aqit")

[node name="BonusGameWalk" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_pltm6")

[node name="Bonusgamebad" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_pb0wo")

[node name="Bonusgamegood" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_mhlny")

[node name="Mario" type="AnimatedSprite2D" parent="."]
position = Vector2(16, 48)
sprite_frames = SubResource("SpriteFrames_iwsq3")
animation = &"small_idle"
script = ExtResource("16_ad0hr")

[node name="Bonusgamegood" type="AudioStreamPlayer" parent="Mario"]
stream = ExtResource("9_mhlny")

[node name="Powerup" type="AudioStreamPlayer" parent="Mario"]
stream = ExtResource("21_dinx3")

[node name="1Up" type="AudioStreamPlayer" parent="Mario"]
stream = ExtResource("22_sr1ei")

[node name="RayCast2D" type="RayCast2D" parent="Mario"]
target_position = Vector2(64, 0)
collision_mask = 256
collide_with_areas = true

[node name="Area2D" type="Area2D" parent="Mario"]
position = Vector2(-16, -120)
collision_mask = 288

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mario/Area2D"]
position = Vector2(15.9241, 120)
shape = SubResource("RectangleShape2D_ecd8y")

[node name="Bonuses" type="Node" parent="."]

[node name="1upBonus" type="AnimatedSprite2D" parent="Bonuses"]
position = Vector2(139.933, 51.9224)
sprite_frames = SubResource("SpriteFrames_hsn7c")
animation = &"1up"

[node name="BonusArea" type="Area2D" parent="Bonuses/1upBonus"]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bonuses/1upBonus/BonusArea"]
position = Vector2(0.91777, -4.84187)
shape = SubResource("RectangleShape2D_vp7se")

[node name="Bonus1up" type="Area2D" parent="Bonuses/1upBonus"]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bonuses/1upBonus/Bonus1up"]
position = Vector2(-11.8499, -4.02718)
shape = SubResource("RectangleShape2D_43xbc")
debug_color = Color(0.640247, 0.524764, 0, 0.42)

[node name="2upBonus" type="AnimatedSprite2D" parent="Bonuses"]
position = Vector2(139.933, 75.7747)
sprite_frames = SubResource("SpriteFrames_hsn7c")
animation = &"2up"

[node name="Bonus2Area" type="Area2D" parent="Bonuses/2upBonus"]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bonuses/2upBonus/Bonus2Area"]
position = Vector2(0.792603, -5.20802)
shape = SubResource("RectangleShape2D_aku13")

[node name="Bonus2up" type="Area2D" parent="Bonuses/2upBonus"]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bonuses/2upBonus/Bonus2up"]
position = Vector2(-12.0485, -4.82896)
shape = SubResource("RectangleShape2D_ep0p7")
debug_color = Color(0.665648, 0.511671, 1.92523e-07, 0.42)

[node name="3upBonus" type="AnimatedSprite2D" parent="Bonuses"]
position = Vector2(139.933, 99.7674)
sprite_frames = SubResource("SpriteFrames_hsn7c")
animation = &"3up"

[node name="Bonus3Area" type="Area2D" parent="Bonuses/3upBonus"]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bonuses/3upBonus/Bonus3Area"]
position = Vector2(0.624481, -5.11878)
shape = SubResource("RectangleShape2D_dofba")

[node name="Bonus3up" type="Area2D" parent="Bonuses/3upBonus"]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bonuses/3upBonus/Bonus3up"]
position = Vector2(-12.3968, -4.64281)
shape = SubResource("RectangleShape2D_nu3xq")
debug_color = Color(0.640486, 0.524645, 0, 0.42)

[node name="FlowerBonus" type="AnimatedSprite2D" parent="Bonuses"]
position = Vector2(139.933, 123.76)
sprite_frames = SubResource("SpriteFrames_hsn7c")
animation = &"Flower"

[node name="Bonus4Area" type="Area2D" parent="Bonuses/FlowerBonus"]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bonuses/FlowerBonus/Bonus4Area"]
position = Vector2(0.551071, -5.05118)
shape = SubResource("RectangleShape2D_j2hsp")

[node name="BonusFlower" type="Area2D" parent="Bonuses/FlowerBonus"]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bonuses/FlowerBonus/BonusFlower"]
position = Vector2(-12.4041, -4.72015)
shape = SubResource("RectangleShape2D_gk12u")
debug_color = Color(0.643494, 0.523147, 0, 0.42)

[connection signal="mario_down_ladder" from="." to="Mario" method="_on_bonus_room_mario_down_ladder"]
[connection signal="mario_straight" from="." to="Mario" method="_on_bonus_room_mario_straight"]
[connection signal="mario_up_ladder" from="." to="Mario" method="_on_bonus_room_mario_up_ladder"]
[connection signal="marionothing" from="Mario" to="." method="_on_mario_marionothing"]
[connection signal="mariostopped" from="Mario" to="." method="_on_mario_mariostopped"]
[connection signal="musicstop" from="Mario" to="." method="_on_mario_musicstop"]
[connection signal="area_entered" from="Mario/Area2D" to="." method="_on_upladder_area_entered"]
[connection signal="area_entered" from="Mario/Area2D" to="." method="_on_area_2d_2_area_entered"]
[connection signal="area_entered" from="Bonuses/1upBonus/BonusArea" to="." method="_on_bonus_area_area_entered"]
[connection signal="area_entered" from="Bonuses/1upBonus/Bonus1up" to="Mario" method="_on_bonus_1_up_area_entered"]
[connection signal="area_entered" from="Bonuses/2upBonus/Bonus2Area" to="." method="_on_bonus_2_area_area_entered"]
[connection signal="area_entered" from="Bonuses/2upBonus/Bonus2up" to="Mario" method="_on_bonus_2_up_area_entered"]
[connection signal="area_entered" from="Bonuses/3upBonus/Bonus3Area" to="." method="_on_bonus_3_area_area_entered"]
[connection signal="area_entered" from="Bonuses/3upBonus/Bonus3up" to="Mario" method="_on_bonus_3_up_area_entered"]
[connection signal="area_entered" from="Bonuses/FlowerBonus/Bonus4Area" to="." method="_on_bonus_4_area_area_entered"]
[connection signal="area_entered" from="Bonuses/FlowerBonus/BonusFlower" to="Mario" method="_on_bonus_flower_area_entered"]
